Correción de varios errores

--- a/Frontend/almacen/src/app/components/inventario/inventario.component.html
+++ b/Frontend/almacen/src/app/components/inventario/inventario.component.html
@@ -106,7 +106,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h2 class="modal-title" id="exampleModalLabel">Registro de inventario</h2>
-        <button type="button" (click)="clearForm()" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" (click)="initForm()" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -189,7 +189,7 @@
       </div>
 
       <div class="modal-footer">
-        <button mat-raised-button color="danger" (click)="clearForm()" data-dismiss="modal">Cancelar</button>
+        <button mat-raised-button color="danger" (click)="initForm()" data-dismiss="modal">Cancelar</button>
         <button mat-raised-button color="success" type="submit" [disabled]="inventarioForm.invalid">Añadir Producto</button>
       </div>
     </div>
@@ -205,7 +205,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="modalEditProducto">Modificar Inventario</h5>
-          <button type="button" (click)="clearForm()" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" (click)="initForm()" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -290,7 +290,7 @@
         </div>
 
         <div class="modal-footer">
-          <button mat-raised-button color="danger" (click)="clearForm()" data-dismiss="modal">Cancelar</button>
+          <button mat-raised-button color="danger" (click)="initForm()" data-dismiss="modal">Cancelar</button>
           <button mat-raised-button color="success" type="submit">Guardar</button>
         </div>
       </div>
@@ -306,7 +306,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h2 class="modal-title" id="deleteModal">Eliminar producto de inventario</h2>
-          <button type="button" (click)="clearForm()" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" (click)="initForm()" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -314,7 +314,7 @@
           ¿Seguro que deseas eliminar el prodcuto del inventario?
         </div>
         <div class="modal-footer">
-          <button mat-raised-button color="primary" (click)="clearForm()" data-dismiss="modal" >Cancelar</button>
+          <button mat-raised-button color="primary" (click)="initForm()" data-dismiss="modal" >Cancelar</button>
           <button mat-raised-button color="danger" type="submit">Eliminar</button>
         </div>
       </div>
